feat(auth): integrate Redis task queue with worker and task distributor for sending verification email
